<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.deosite</groupId>
    <artifactId>tests</artifactId>
    <version>0.0.1</version>
    <name>Deosite Tests</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <java.source.version>${java.version}</java.source.version>
        <java.target.version>${java.version}</java.target.version>
        <maven.version>3.8.1</maven.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.failsafe-plugin.version>3.0.0-M4</maven.failsafe-plugin.version>
        <maven.surfire-plugin.version>3.0.0-M4</maven.surfire-plugin.version>
        <maven.enforcer-plugin.version>3.0.0-M3</maven.enforcer-plugin.version>
        <maven.compiler-plugin.version>3.8.1</maven.compiler-plugin.version>
        <selenium.version>3.131.59</selenium.version>
        <serenity.version>2.4.35</serenity.version>
        <serenity.cucumber.version>2.4.34</serenity.cucumber.version>
        <cucumber.version>6.10.4</cucumber.version>
        <junit.version>5.7.0</junit.version>
        <aspectj.version>1.9.6</aspectj.version>
        <allure.version>2.13.5</allure.version>
        <parallel.tests>4</parallel.tests>
        <webdriver.base.url></webdriver.base.url>
    </properties>
    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>org.seleniumhq.selenium</groupId>-->
        <!--            <artifactId>selenium-java</artifactId>-->
        <!--            <version>3.141.59</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>io.qameta.allure</groupId>-->
        <!--            <artifactId>allure-junit5</artifactId>-->
        <!--            <version>${allure.version}</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>io.qameta.allure</groupId>-->
        <!--            <artifactId>allure-selenide</artifactId>-->
        <!--            <version>${allure.version}</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.7.2</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.10.5</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>datatable</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.apiguardian</groupId>
            <artifactId>apiguardian-api</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber6</artifactId>
            <version>${serenity.cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-ensure</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay-webdriver</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>picocontainer</groupId>-->
        <!--            <artifactId>picocontainer</artifactId>-->
        <!--            <version>3</version>-->
        <!--        </dependency>-->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <requireUpperBoundDeps/>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surfire-plugin.version}</version>
                <configuration>
                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe-plugin.version}</version>
                <configuration>
                    <includes>
                        <include>com/deosite/tests/CucumberTestSuite.java</include>
                    </includes>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-core</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>single</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven.failsafe-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>com/deosite/tests/CucumberTestSuite.java</include>
                            </includes>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                            <systemPropertyVariables>
                                <environment>single</environment>
                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>parallel</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven.failsafe-plugin.version}</version>
                        <configuration>
                             <includes>
                                <!--<include>**/CheckoutSuite*.java</include>
                               <include>**/OrderingTestSuite_1*.java</include>
                                <include>**/OrderingTestSuite_2*.java</include>
                                  <include>**/OrderingTestSuite_3*.java</include>
                                 <include>**/OrderingLoggedInSuite_1*.java</include>
                                <include>**/OrderingLoggedInSuite_2*.java</include>
                                <include>**/OrderingLoggedInSuite_3*.java</include>
                             <include>**/FilteringTestSuite*.java</include>
                              <include>**/LoggingInSuite*.java</include>
                            <include>**/NavigatingWebsiteSuite*.java</include>
                                <include>**/RegisteringSuite*.java</include>
                               <include>**/SortingSuite*.java</include>
                                <include>**/UsingMinicartSuite_1*.java</include>
                                <include>**/UsingMinicartSuite_2*.java</include>-->
                              <include>**/UsingMyAccountSuite*.java</include>
                                <include>**/ProductPageSuite*.java</include>
                                <include>**/CouponCodeSuite_1*.java</include>
                                 <include>**/CouponCodeSuite_2*.java</include>
                                 <include>**/ApplyAllFiltersSuite*.java</include>
                                 <include>**/BrowseAndOrderFromCategoriesSuite*.java</include>
                            </includes>
                            <parallel>suites</parallel>
                            <threadCount>60</threadCount>
                            <forkCount>60</forkCount>
                            <reuseForks>false</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                            <systemPropertyVariables>
                                <taskID>parallel_${surefire.forkNumber}</taskID>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>